--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ci\n",
+    "for city in cities:\n",
+    "    \n",
     "names_and_ranks = [] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
