--- a/index.ipynb
+++ b/index.ipynb
@@ -214,6 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "iteration = 0\n",
     "for city in cities:\n",
     "    \n",
     "names_and_ranks = [] \n",
