--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "iteration = 0\n",
     "for city in cities:\n",
-    "    names_and_ranks = [] \n",
+    "    names_and_ranks = [print(iteration)] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
