--- a/index.ipynb
+++ b/index.ipynb
@@ -210,32 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 . {'City': 'Buenos Aires', 'Country': 'Argentina', 'Population': 2891000, 'Area': 4758}\n",
-      "1 . {'City': 'Toronto', 'Country': 'Canada', 'Population': 2800000, 'Area': 2731}\n",
-      "1 . {'City': 'Pyeongchang', 'Country': 'South Korea', 'Population': 2581000, 'Area': 3194}\n",
-      "1 . {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200}\n",
-      "1 . {'City': 'Albuquerque', 'Country': 'New Mexico', 'Population': 559277, 'Area': 491}\n",
-      "1 . {'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}\n",
-      "1 . {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68}\n",
-      "1 . {'City': 'Archipelago Sea', 'Country': 'Finland', 'Population': 60000, 'Area': 8300}\n",
-      "1 . {'City': 'Walla Walla Valley', 'Country': 'USA', 'Population': 32237, 'Area': 33}\n",
-      "1 . {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}\n",
-      "1 . {'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}\n",
-      "1 . {'City': 'Iguazu Falls', 'Country': 'Argentina', 'Population': 0, 'Area': 672}\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-d0af545f8abf>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-d0af545f8abf>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks = [print(iteration += 1, '.', city)]\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "iteration = 0\n",
     "for city in cities:\n",
-    "    names_and_ranks = [print(iteration+1, '.', city)] \n",
+    "    names_and_ranks = [print(iteration += 1, '.', city)] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
