Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,9 +223,8 @@
     }
    ],
    "source": [
-    "iteration = 0\n",
     "for city in cities:\n",
-    "    names_and_ranks = [print(iteration += 1, '.', city_names[city])] \n",
+    "    names_and_ranks = [print(city_indi, '.', city_names[city])] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
