--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "for city in cities:\n",
-    "    names_and_ranks = [print(city_indi, '.', city_names[city])] \n",
+    "    names_and_ranks = [print(city_indices[index], '.', city_names[city])] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
