--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "for city in cities:\n",
+    "for name in city_names:\n",
     "    names_and_ranks = [print(city_indices[index], '.', city_names[city])] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
