--- a/index.ipynb
+++ b/index.ipynb
@@ -224,6 +224,7 @@
    ],
    "source": [
     "for name in city_names:\n",
+    "    for index in city_indices:\n",
     "    names_and_ranks = [print(city_indices[index], '.', city_names[city])] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
