--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-12-8a376cc3c90b>, line 3)",
+     "evalue": "expected an indented block (<ipython-input-13-10651abced27>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-8a376cc3c90b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks = [print(city_indices[index], '.', city_names[city])]\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-10651abced27>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks = [print(city_indices[index], '.', city_names[name])]\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
    "source": [
     "for name in city_names:\n",
     "    for index in city_indices:\n",
-    "    names_and_ranks = [print(city_indices[index], '.', city_names[city])] \n",
+    "    names_and_ranks = [print(city_indices[index], '.', city_names[name])] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
