--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "for name in city_names:\n",
+    "for  in city_names:\n",
     "    for index in city_indices:\n",
     "    names_and_ranks = list(print(city_indices[index], '.', city_names[name])) \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
