--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    names_and_ranks = list(print(city_indices[index], '.', city_names[name])) \n",
+    "    print(names_and_ranks = list(print(city_indices[index], '.', city_names[name])) \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
