--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print((city_indices[index] + 1)\n",
+    "    print(city_indices[index] + 1)\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
