Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,21 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-15-2c51aa0fb3f0>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-2c51aa0fb3f0>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    # write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\n\u001b[0m                                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n"
      ]
     }
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(city_indices[index] + 1)\n",
+    "    print(city_indices[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
