--- a/index.ipynb
+++ b/index.ipynb
@@ -210,24 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Hola' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-7f081ace3870>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcity_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcity_indices\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mHola\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# write a for loop that adds the properly formatted string to the names_and_ranks list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Hola' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 Hola\n",
+      "2 Hola\n",
+      "3 Hola\n",
+      "4 Hola\n",
+      "5 Hola\n",
+      "6 Hola\n",
+      "7 Hola\n",
+      "8 Hola\n",
+      "9 Hola\n",
+      "10 Hola\n",
+      "11 Hola\n",
+      "12 Hola\n"
      ]
     }
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(city_indices[index] + 1, Hola)\n",
+    "    print(city_indices[index] + 1, for )\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
