Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(city_indices[index] + 1, for )\n",
+    "    print(city_indices[index] + 1, for name in city_names:\n",
+    "         )\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
