--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    "source": [
     "for index in city_indices:\n",
     "    print(city_indices[index] + 1, for name in city_names:\n",
-    "         )\n",
+    "         print(city_names[name]))\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
