Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,31 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 Hola\n",
-      "2 Hola\n",
-      "3 Hola\n",
-      "4 Hola\n",
-      "5 Hola\n",
-      "6 Hola\n",
-      "7 Hola\n",
-      "8 Hola\n",
-      "9 Hola\n",
-      "10 Hola\n",
-      "11 Hola\n",
-      "12 Hola\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-20-9e4bea61a102>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-9e4bea61a102>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(city_indices[index] + 1, for name in city_names:\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(city_indices[index] + 1, for name in city_names:\n",
+    "    print(city_indices[index] + 1, name in city_names:\n",
     "         print(city_names[name]))\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
