--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(city_indices[index] + 1, city_names[name])\n",
+    "    print(city_indices[index] + 1, city_names[na])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
