--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
     }
    ],
    "source": [
-    "for index in city_indices:\n",
+    "names_and_rfor index in city_indices:\n",
     "    print(city_indices[index] + 1, '.', city_names[index])\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
