--- a/index.ipynb
+++ b/index.ipynb
@@ -210,31 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 . Buenos Aires\n",
-      "2 . Toronto\n",
-      "3 . Pyeongchang\n",
-      "4 . Marakesh\n",
-      "5 . Albuquerque\n",
-      "6 . Los Cabos\n",
-      "7 . Greenville\n",
-      "8 . Archipelago Sea\n",
-      "9 . Walla Walla Valley\n",
-      "10 . Salina Island\n",
-      "11 . Solta\n",
-      "12 . Iguazu Falls\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-24-eabf6f666888>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-eabf6f666888>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = list(for index in city_indices:\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names_and_rfor index in city_indices:\n",
-    "    print(city_indices[index] + 1, '.', city_names[index])\n",
+    "names_and_ranks = listfor index in city_indices:\n",
+    "    print(city_indices[index] + 1, '.', city_names[index]))\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
