--- a/index.ipynb
+++ b/index.ipynb
@@ -210,21 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-24-eabf6f666888>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-25-434ad5b5561f>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-24-eabf6f666888>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = list(for index in city_indices:\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-434ad5b5561f>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    names_and_ranks = [for index in city_indices:\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "names_and_ranks = listfor index in city_indices:\n",
-    "    print(city_indices[index] + 1, '.', city_names[index]))\n",
+    "for index in city_indices:\n",
+    "    print(city_indices[index] + 1, '.', city_names[index])]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
