--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,7 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(f'(city_indices[index] + 1)', '.', f'(city_names[index])\n",
+    "    print(f'(city_indices[index] + 1)', '.', f'(city_names[index])'\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
