Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,31 +210,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n",
-      "city_indices[index] + 1 . city_names[index]\n"
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n",
+      "(city_indices[index] + 1) . (city_names[index])\n"
      ]
     }
    ],
    "source": [
     "for index in city_indices:\n",
-    "    print(f'(city_indices[index] + 1)', '.', f'(city_names[index])'\n",
+    "    print(city_indices[index] + 1, '.', '(city_names[index])')\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
