--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
    ],
    "source": [
     "for index in city_indices:\n",
-    "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])\n",
+    "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
