--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -230,12 +230,23 @@
       "11 . Solta\n",
       "12 . Iguazu Falls\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "for index in city_indices:\n",
     "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])]\n",
-    "# write a for loop that adds the properly formatted string to the names_and_ranks list"
+    "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "names_and_ranks"
    ]
   },
   {
