Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -228,25 +228,16 @@
       "9 . Walla Walla Valley\n",
       "10 . Salina Island\n",
       "11 . Solta\n",
-      "12 . Iguazu Falls\n"
+      "12 . Iguazu Falls\n",
+      "[None]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "for index in city_indices:\n",
     "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
-    "names_and_ranks"
+    "print(names_and_ranks)"
    ]
   },
   {
