--- a/index.ipynb
+++ b/index.ipynb
@@ -234,6 +234,7 @@
     }
    ],
    "source": [
+    "names_and\n",
     "for index in city_indices:\n",
     "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
