--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
-    "    names_and_rank\n",
+    "    names_and_rank.append\n",
     "    names_and_ranks = [print(city_indices[index] + 1, '.', city_names[index])]\n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list\n",
     "print(names_and_ranks)"
