--- a/index.ipynb
+++ b/index.ipynb
@@ -210,38 +210,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
     "for index in city_indices:\n",
     "    names_and_ranks.append(f'{index + 1}. {city_names[index]}')\n",
-    "    # write a for loop that adds the properly formatted string to the names_and_ranks list"
+    "    # write a for loop that adds the properly formatted string to the names_and_ranks list\n",
+    "    names_and_ranks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'12. Iguazu Falls'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "12. Iguazu Falls\n"
+     ]
     }
    ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "print(names_and_ranks[0]) # '1. Buenos Aires'\n",
     "\n",
-    "names_and_ranks[1] # '2. Toronto'\n",
+    "print(names_and_ranks[1]) # '2. Toronto'\n",
     "\n",
-    "names_and_ranks[-1] # '12. Iguazu Falls'"
+    "print(names_and_ranks[-1]) # '12. Iguazu Falls'"
    ]
   },
   {
