--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for population in city_populations:\n",
+    "    city_populations.append(f'{}')"
    ]
   },
   {
