--- a/index.ipynb
+++ b/index.ipynb
@@ -253,13 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-53-9779bde3b613>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-9779bde3b613>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    city_populations.append(f'{City['Population']}')\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations.append(f'{city_populations[population]}')"
+    "    city_populations.append(cities)"
    ]
   },
   {
